--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 		</script>
 			<div>★PORTAL★</div>
 			<button onclick="startgame('ws://192.168.32.185:10000')">game1</button>
-			<button onclick="startgame('ws://192.168.32.185:10001')">game2</button>
-			<canvas id="screen" width="900" heidht="1600"></canvas>
+			<button onclick="startgame('ws://192.168.32.185:10001')">game2</button><br/>
+			<canvas id="screen" width="900" height="1600" style="{background-color:yellow;border:solid 1px black;}"></canvas>
 			<textarea id="log" cols="100" rows="20"></textarea>
 			<p id="received">
 				<strong>Received Messages:</strong>
